fix overflow bug

--- a/src/css/filter.module.css
+++ b/src/css/filter.module.css
@@ -1,6 +1,7 @@
 .filter {
     width: 250px;
     float: left;
+    overflow: hidden;
 
 }
 
